name:                lvish-graph-algorithms
version:             0.1.0.0
synopsis:            Graph algorithms in lvish
-- description:         
-- license:             
-- license-file:        LICENSE
author:              Praveen Narayanan
maintainer:          pravnar@indiana.edu
-- copyright:           
category:            Concurrency
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  exposed-modules:     Data.LVar.Graph.BFS, Data.LVar.Graph.MIS
  -- other-modules:       
  other-extensions:    CPP, BangPatterns, OverloadedStrings, ScopedTypeVariables, NamedFieldPuns
  build-depends:       base >=4.6 && <4.7, lvish >=1.0 && <2.0, process==1.1.0.2, directory ==1.2.0.1,
                       vector >=0.10 && <0.11, time ==1.4.0.1, monad-par-extras >=0.3 && <0.5,
                       pbbs-haskell, containers >=0.5 && <0.6
  hs-source-dirs:      src
  default-language:    Haskell2010

executable lvish-algorithms
  main-is:             Main.hs
  hs-source-dirs:      src
  ghc-options:         -O2 -threaded -rtsopts -with-rtsopts=-N4
  build-depends:       base >=4.6 && <4.7, lvish >=1.0 && <2.0, process==1.1.0.2, directory ==1.2.0.1,
                       vector >=0.10 && <0.11, time ==1.4.0.1, monad-par-extras >=0.3 && <0.5,
                       pbbs-haskell, containers >=0.5 && <0.6
  default-language:    Haskell2010