Name:                par-collections
Version:             1.2
Synopsis:            Generic parallel combinators for data and iteration spaces.

-- Version history:
--  1.0      : This library introduced to replace the deprecated monad-par-extras.
--  1.1      : Add LVish-2.0 style effect signatures
--  1.1.1    : Add Split instance for list
--  1.2      : Remove Eq superclass of Split.  Seems unjustified.

Description:
  These modules provide means to traverse and consume
  common data structures, in parallel, using any Par monad.
  .
  Additionally, a variety of parallel looping constructs are
  provided by this package (e.g. parallel traversals where 
  the "data structure" is merely a range / iteration space.)

License:             BSD3
License-file:        LICENSE
Author:              Ryan Newton
Maintainer:          Ryan Newton <rrnewton@gmail.com>
Copyright:           (c) Ryan Newton 2011-2013
Stability:           Experimental
Category:            Control,Parallelism,Monads
Build-type:          Simple
Cabal-version:       >=1.8

Source-repository head
  type:     git
  location: https://github.com/iu-parfunc/lvars
  subdir:   haskell/par-collections

Library
  Exposed-modules:
     Data.Par
     Data.Par.Splittable
     Data.Par.Traversable
     Data.Par.Range
     Data.Par.List
     Data.Par.Map
     Data.Par.Set
     
  Build-depends: base >= 4 && < 5
               -- This provides the interface which monad-par implements:
               , cereal       >= 0.3
               , deepseq      >= 1.3
               , random       >= 1.0
               , mtl          >= 2.0
               , transformers >= 0.2
               , par-classes  >= 1.1

               -- These are so we can provide instances for existing collections:
               , primitive    >= 0.5  && < 0.6
               , vector       >= 0.10 && < 0.11

  if impl(ghc < 7.7) {
    build-depends: containers >= 0.5
  } else {
    cpp-options: -DNEWCONTAINERS
    build-depends: containers >= 0.5.4.0
  }
  ghc-options: -O2 -rtsopts
  Other-modules:

