name:                par-schedulers
version:             0.1.0.0
-- synopsis:
-- description:
-- license:
author:              Ömer Sinan Ağacan
maintainer:          omeragacan@indiana.edu
-- copyright:
-- category:
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  exposed-modules:
    Control.Par.Scheds.Direct
    Control.Par.Scheds.Sparks
    Control.Par.Scheds.Trace

  build-depends:
    base        >=4.7 && <4.9,
    monad-par   >=0.3 && <0.4,
    par-classes

  default-language:    Haskell2010
  ghc-options:         -Wall -O2
