Name:                par-transformers
Version:             1.0
Synopsis:            Extend Par monads with additional capabilities

-- Version history:
--  1.0     : Initial release to replace deprecated monad-par-transformers.

Description:         The modules below provide additional
                     data structures, and other added capabilities
                     layered on top of any valid 'Par' monad.

License:             BSD3
License-file:        LICENSE
Author:              Ryan Newton, Aaron Todd
Maintainer:          Aaron Todd <toddaaro@gmail.com>
Copyright:           (c) Ryan Newton, Aaron Todd 2013
Stability:           Experimental
Category:            Control,Parallelism,Monads
Build-type:          Simple
Cabal-version:       >=1.8

Library
  Source-repository head
    type:     git
    location: https://github.com/iu-parfunc/lvars
    subdir:   haskell/par-transformers

  Exposed-modules: 
                 -- A collection of combinators for common parallel
                 -- patterns and data structure traversals:
--                 Control.Par.Combinator,

                 -- A scheduler-transformer that adds cancellation:
                 Control.LVish.CancelT

                 -- State on top of Par is generally useful, but experimental
                 Control.Par.StateT                 
--                 Control.Par.VecT

                 Control.Par.ST
                 Control.Par.ST.Vec
                 Control.Par.ST.Vec2
                 -- Control.LVish.ST.UVec
                 -- Control.LVish.ST.UVec2
                 
                 -- Deterministic RNG needs more testing.
--                 Control.Par.RNG
--                 Control.Par.Pedigree

  Other-modules:
                 -- Pedigree is experimental, but potentially useful for
                 -- many purposes such as assigning unique, reproducable
                 -- identifiers to IVars
--                 Control.Monad.Par.Pedigree


  Build-depends: base >= 4 && < 5
               -- This provides the interface which monad-par implements:
               , par-classes  >= 1.0 && < 2.0
               , cereal       >= 0.3
               , deepseq      >= 1.3
               , random       >= 1.0
               , mtl          >= 2.0
               , transformers >= 0.2
               , vector       >= 0.9
               , ghc-prim 

  ghc-options: -O2
  Other-modules:


Test-suite test-par-transformers
  Type: exitcode-stdio-1.0
  Hs-source-dirs: tests/  
  Main-is: Main.hs
  -- (1) Build depends that are used directly by the test files, including:
  -- (1A) Self dependency:
  Build-depends: par-transformers
  -- (1B) Dependencies common to test files and the library:
  Build-depends: base >= 4 && < 5
               , par-classes >= 1.0 && < 2.0  
               , mtl    >= 2.0
               , transformers >= 0.2
               , vector >= 0.9
               , ghc-prim 
  -- (1C) Additional depends to test concrete instances:
  Build-depends: lvish        >= 1.0.0.4

  -- (1C) Additional build depends for testing:
  Build-depends: test-framework, test-framework-th, test-framework-hunit, HUnit


