Name:                test-par-collections
Version:             1.1
Synopsis:            Factored out test-suite from par-collections.

Cabal-version:       >=1.8
Build-type:          Simple

-- Factoring this out breaks the cycle between the 'par-collections' and 'lvish' packages.

Executable test-par-collections-dummy-executable
  Main-is: Dummy.hs
  Build-depends: base 

Test-suite test-par-collections
  Type: exitcode-stdio-1.0
  hs-source-dirs: ./
  Main-is: Main.hs
  -- Build depends that are used directly by the test files, including:
  -- (1) Self dependency:
  Build-depends: par-collections
  -- (2) Dependencies common to test files and the library:
  Build-depends: base >= 4 && < 5
               , time >= 1.4 
               , par-classes >= 1.1 
--               , monad-par >= 0.3.4.7 -- Not an instance of the new ParMonad class.
               , atomic-primops >= 0.6
  --              , mtl    >= 2.0
  --              , transformers >= 0.2
  --              , vector >= 0.9
  --              , ghc-prim 

  -- Atomic-primops fails when used by template-haskell/ghci on linux:
  if impl(ghc < 7.7) && os(linux) {
    buildable: False
  }

  -- (3) Additional depends to test concrete instances:
  Build-depends: lvish  >= 2.0

  -- (4) Additional build depends for testing:
  Build-depends: HUnit
               , tasty
               , tasty-hunit
               , tasty-th
               , tasty-quickcheck > 0.2.4
               , QuickCheck
               , HUnit
               , time
               , text


  ghc-options: -O2 -threaded -rtsopts

  -- Debugging info:
  -- ghc-options: -keep-tmp-files -dsuppress-module-prefixes -ddump-to-file -ddump-core-stats -ddump-simpl-stats -dcore-lint -dcmm-lint
  -- ghc-options: -ddump-ds -ddump-simpl -ddump-stg -ddump-asm -ddump-bcos -ddump-cmm -ddump-opt-cmm -ddump-inlinings
