name:                bf-traverse-LVar
version:             0.1.0.0
synopsis:            Cabal file for building the bf-traverse-LVar benchmark executable. A part of the benchmarking infrastructure for the fhpc13-lvars library.
author:              Lindsey Kuper and Ryan Newton
maintainer:          lkuper@cs.indiana.edu
category:            Concurrency
build-type:          Simple
cabal-version:       >=1.8

executable bf-traverse-LVar
  main-is:          bf-traverse-LVar.hs
  hs-source-dirs: 	.., .
  ghc-options:		-O2 -threaded -rtsopts
  build-depends:    base ==4.6.*, split ==0.2.*, containers ==0.5.*, bytestring ==0.10.*, time ==1.4.*, rdtsc ==1.3.*, vector ==0.10.*, deepseq ==1.3.*, fhpc13-lvars ==0.1.0.0, monad-par >=0.3.4.4, monad-par-extras >=0.3.3
