

name:                MergeSort
version:             1.0
build-type:          Simple
-- build-type:          Custom
cabal-version:       >=1.8

flag newgeneric
  default:           True
  description: Use new generic interfaces rather than old.

flag lvish-st
  default:           True
  description: LVish scheduler with ParST transformer on top.  

flag direct-st
  default:           False
  description: Direct scheduler with ParST transformer on top.  

flag trace-st
  default:           False
  description: Trace scheduler with ParST transformer on top.  

flag sparks-st
  default:           False
  description: Sparks scheduler with ParST transformer on top.  

--------------------------------------------------------------------------------
executable test-mergesort-parST
  main-is:           MergeSort.hs

  -- Including a higher-up dir for schedulers:
  hs-source-dirs:    . ../schedulers/

  c-sources: cilksort.c

  -- Must pick ONE of the available schedulers:
  -- if !(flag(trace-st) || flag(direct-st) || flag(sparks-st)  || flag(lvish-st) )
  --   buildable:       False

  build-depends:  base == 4.*, deepseq >= 1.3, vector >= 0.10, vector-algorithms,
                  mtl, transformers >= 0.3, time, mwc-random, ghc-prim
--  build-depends:  split >= 0.2,
--  build-depends:  test-framework, test-framework-th, test-framework-hunit, HUnit
  build-depends:  par-classes, par-transformers

  build-depends:  monad-par, lvish

  -- Only one of these flags should be turned on at once:

  if flag(trace-st)
     cpp-options:     -DPARSCHED=Control.Monad.Par.Scheds.Trace

  if flag(direct-st)
     cpp-options:     -DPARSCHED=Control.Monad.Par.Scheds.Direct

  if flag(sparks-st)
     cpp-options:     -DPARSCHED=Control.Monad.Par.Scheds.Sparks

  if flag(lvish-st)
     cpp-options:     -DPARSCHED=Control.LVish

  ghc-options:       -O2 -threaded -rtsopts -with-rtsopts=-N  
  extensions: CPP DoAndIfThenElse

  -- My own custom field to change the C compiler:
--  x-cc-name: gcc
--  cc-options: -O3 

