name:                MergeSort
version:             1.0
build-type:          Simple
cabal-version:       >=1.8

flag newgeneric
  default:           True
  description: Use new generic interfaces rather than old.

flag lvish-st
  default:           True
  description: LVish scheduler with ParST transformer on top.

flag direct-st
  default:           False
  description: Direct scheduler with ParST transformer on top.

flag trace-st
  default:           False
  description: Trace scheduler with ParST transformer on top.

flag sparks-st
  default:           False
  description: Sparks scheduler with ParST transformer on top.

--------------------------------------------------------------------------------
executable test-mergesort-parST
  main-is:           MergeSort.hs

  c-sources: cilksort.c
  -- required for REPL, not sure about performance implications
  cc-options: -fPIC 

  -- Must pick ONE of the available schedulers:
  -- if !(flag(trace-st) || flag(direct-st) || flag(sparks-st)  || flag(lvish-st) )
  --   buildable:       False

  build-depends:  base == 4.*, deepseq >= 1.3, vector >= 0.10, vector-algorithms,
                  mtl, transformers >= 0.3, time, mwc-random, ghc-prim

  build-depends:  par-classes, par-transformers

  build-depends:  monad-par, lvish

  -- Only one of these flags should be turned on at once:

  if flag(trace-st)
     cpp-options:     -DPARSCHED=Control.Monad.Par.Scheds.Trace

  if flag(direct-st)
     cpp-options:     -DPARSCHED=Control.Monad.Par.Scheds.Direct

  if flag(sparks-st)
     cpp-options:     -DPARSCHED=Control.Monad.Par.Scheds.Sparks

  if flag(lvish-st)
     cpp-options:     -DPARSCHED=Control.LVish

  ghc-options:       -O2 -threaded -rtsopts -with-rtsopts=-N -Wall
  extensions:        CPP DoAndIfThenElse
