name:                MergeSort
version:             1.0
build-type:          Simple
cabal-version:       >=1.8

executable test-mergesort-parST
  main-is:          MergeSort.hs

  c-sources:        cilksort.c
  -- required for REPL, not sure about performance implications
  cc-options:       -fPIC

  build-depends:
    base                    == 4.*,
    deepseq                 >= 1.3,
    ghc-prim,
    lvish,
    monad-par,
    mtl,
    mwc-random,
    par-classes,
    par-transformers,
    time,
    transformers            >= 0.3,
    vector                  >= 0.10,
    vector-algorithms

  ghc-options:      -O2 -threaded -rtsopts -Wall
